--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,8 +40,8 @@
             android:layout_marginLeft="143dp"
             android:layout_marginEnd="143dp"
             android:layout_marginRight="143dp"
-            android:layout_marginBottom="444dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@android:drawable/list_selector_background" />
@@ -52,12 +52,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="112dp"
+            android:layout_marginBottom="50dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5">
+            app:layout_constraintBottom_toTopOf="@+id/line2">
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -88,12 +88,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="232dp"
+            android:layout_marginBottom="200dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5">
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -129,11 +129,10 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="164dp"
             android:layout_marginRight="164dp"
-            android:layout_marginBottom="53dp"
             android:textColor="@color/teal_700"
             android:clickable="true"
             android:textSize="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/line1"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView5" />
